Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21095

Index condition push down is not reflected in optimizer trace

    XMLWordPrintable

Details

    Description

      create table t1 (a int primary key, b int);
      insert into t1 values (1,1),(2,2),(3,3);
       
      create table t2 (a int primary key, b int);
      insert into t2 values (1,1),(2,2),(3,3),(4,4);
       
       
      set optimizer_trace=1;
      SELECT * FROM t1 LEFT JOIN t2 ON t2.a=t1.a WHERE t2.b < 5;
      select * from information_schema.optimizer_trace;
      explain extended
      SELECT * FROM t1 LEFT JOIN t2 ON t2.a=t1.a WHERE t2.b < 5;
       
      drop table t1,t2;
      

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              sanja Oleksandr Byelkin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 5.91h
                  1d 5.91h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.